--- a/src/App.scss
+++ b/src/App.scss
@@ -5,9 +5,11 @@
     min-height: 100vh;
 }
 
-header{
-    flex: 0 0 auto;
-}
-main{
+
+.wrapper .container{
     flex: 1 0 auto;
+}
+
+footer{
+    flex: 0 0 auto;
 }
