--- a/src/index.scss
+++ b/src/index.scss
@@ -22,13 +22,17 @@
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3em;
   font-weight: 700;
 }
 h2, h3{
   font-weight: 600;
-  font-size: 2.2em;
+  font-size: 2em;
 }
+h3{
+  font-size: 1.5em;
+}
+
 p{
   color: #343434;
 }
@@ -62,16 +66,18 @@ a:hover {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: .3em .4em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
+  background: transparent;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  color: #fff;
+  background-color: #0BCF6B;
+
 }
 button:focus,
 button:focus-visible {
