--- a/src/components/product/product.module.scss
+++ b/src/components/product/product.module.scss
@@ -18,9 +18,14 @@
     align-items: center;
     justify-content: space-between;
 
+    &__link{
+        display: block; 
+        height: 100%;
+    }
+
     &__img{
         object-fit: cover;
-        height: 100%;
+        height: 75%;
     }
 
     &__title{
