--- a/src/routes/detailed/detailed.module.scss
+++ b/src/routes/detailed/detailed.module.scss
@@ -13,7 +13,7 @@
         margin: 10px 10px;
     }
     &__description{
-        margin: .5rem 0
+        margin: .5rem 0;
     }
     &__rating{
         font-size: 1.3rem;
