--- a/src/index.scss
+++ b/src/index.scss
@@ -53,25 +53,23 @@ a:hover {
   color: #0BCF6B;
 }
 
-
-
-/* body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-} */
+input{
+  background-color: transparent;
+  border: 1px solid rgba($color: #000000, $alpha: .1);
+  border-radius: 5px;
+  padding: .3em .4em;
+  font-size: 1.3em;
+}
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  background-color: transparent;
+  border: 1px solid rgba($color: #000000, $alpha: .1);
+  border-radius: 5px;
   padding: .3em .4em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   cursor: pointer;
-  background: transparent;
   transition: border-color 0.25s;
 }
 button:hover {
