--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -26,3 +26,22 @@
         margin-top: 1rem;
     }
 }
+
+@media (max-width:1040px) {
+    .footer__top .footer__list{
+        display: block;
+    }
+    .footer__top .footer__item + .footer__item{
+        margin-top: 1rem;
+        margin-left: 0;
+    }
+}
+@media (max-width:468px) {
+    .footer__top{
+        display: block;
+    }
+    .footer__logo{
+        display: block;
+        margin-bottom: 1rem;
+    }
+}
