--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -23,4 +23,85 @@
     &__item + &__item{
         margin-left: 1rem;
     }
+
+    // значок бургера, появляющиеся на маленьком экране
+    &__burger{
+        cursor:auto;
+        display: none;
+        padding: .6rem .4rem;
+    }
+    &__burger:hover{
+        background-color: transparent;
+        color: #000;
+    }
+
+    &__burger span{
+        display: block;
+        width: 15px;
+        height: 3px;
+        background-color: #000;
+        position: relative;
+    }
+    &__burger span::after, 
+    &__burger span::before{
+        position: absolute;
+        width: 15px;
+        height: 3px;
+        left: 0;
+        background-color: #000;
+        content: '';
+    }
+    &__burger span::before{
+        top: -4px;
+    }
+    &__burger span::after{
+        bottom: -4px;
+    }
+}
+
+.menu{
+    padding: 1rem;
+    background-color: #fff;
+    position: fixed;
+    z-index: 20;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    // display: none;
+    transform: translateX(-100%);
+    transition: transform ease .3s;
+
+    &_open{
+        transform: translateX(0);
+    }
+
+    &__list{
+        position: relative;
+    }
+    // кнопка закрытия
+    &__list>svg{
+        font-size: 2rem;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    &__item + &__item{
+        margin-top: 1rem;
+    }
+
+}
+
+@media (max-width: 560px) {
+    .header__bot{
+        display: none;
+    }
+    .header__top .header__list{
+        display: none;
+    }
+    .header__burger{
+        display: block;
+    }
+
 }
