--- a/src/routes/information/information.module.scss
+++ b/src/routes/information/information.module.scss
@@ -11,3 +11,9 @@
         width: max-content;
     }
 }
+
+@media (max-width: 768px) {
+    .information__form input{
+        width: 100%;
+    }
+}
