--- a/src/routes/detailed/detailed.module.scss
+++ b/src/routes/detailed/detailed.module.scss
@@ -1,6 +1,14 @@
 .product{
+    &__images, &__text{
+        background-color: #fff;
+        border-radius: 10px;
+        padding: .8rem 1rem;
+    }
     &__images{
-        border-bottom: 1px solid rgba($color: #000000, $alpha: .1);
+        border-bottom: 3px solid rgba($color: #000000, $alpha: .1);
+    }
+    &__text{
+        margin-top: 1rem;
     }
     &__wrapper{
         display: flex;
