fixes, home page adaprive

--- a/src/components/sort/sort.module.scss
+++ b/src/components/sort/sort.module.scss
@@ -43,3 +43,9 @@
         border-bottom: 3px dashed #0BCF6B;
     }
 }
+
+@media (max-width: 948px) {
+    .sort{
+        margin: 1.5rem 0;
+    }
+}
