--- a/src/components/product/product.module.scss
+++ b/src/components/product/product.module.scss
@@ -50,3 +50,15 @@
         margin-left: 1rem;
     }
 }
+
+@media (max-width: 1136px) {
+    .product{
+        width: calc(100% / 2 - 20px);
+    }
+}
+
+@media (max-width: 560px) {
+    .product{
+        width: 100%;
+    }
+}
