--- a/src/routes/detailed/detailed.module.scss
+++ b/src/routes/detailed/detailed.module.scss
@@ -32,3 +32,14 @@
     
 }
 
+@media (max-width: 1036px) {
+    .product__wrapper img{
+        width: 250px;
+    }
+}
+@media (max-width: 600px) {
+    .product__wrapper{
+        display: block;
+        text-align: center;
+    }
+}
