--- a/src/routes/cart/cart.module.scss
+++ b/src/routes/cart/cart.module.scss
@@ -25,18 +25,66 @@
     }
 
     &__item{
+        padding: 1rem;
         border-radius: 10px;
         display: flex;
         align-items: center;
         
         border: 1px solid rgba($color: #000000, $alpha: .1);
     }
+    
+    &__item + &__item{
+        margin-top: 1rem;
+    }
+
+    &__text{
+        margin-left: 5rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-grow: 1;
+    }
 
     &__img{
         width: 25%;
+        height: 185px;
     }
 
-    &__item + &__item{
+    &__title{
+        font-weight: bold;
+    }
+    &__btns{
+        text-align: center;
+    }
+    &__ctrl button{
+        padding: .6rem 1rem;
+    }
+
+}
+
+@media (max-width: 878px) {
+    .cart__text{
+        display: block;
+    }
+    .cart__btns{
+        text-align: unset;
+        margin: .8rem 0;
+    }
+    .cart__delete{
+        margin-left: 6rem;
+    }
+    .cart__img{
+        width: 190px;
+    }
+}
+
+@media (max-width: 568px) {
+    .cart__item{
+        display: block;
+        text-align: center;
+    }
+    .cart__text{
+        margin-left: 0;
         margin-top: 1rem;
     }
 }
