--- a/src/index.scss
+++ b/src/index.scss
@@ -53,7 +53,7 @@ a:hover {
   color: #0BCF6B;
 }
 
-input{
+input, textarea{
   background-color: transparent;
   border: 1px solid rgba($color: #000000, $alpha: .1);
   border-radius: 5px;
