--- a/src/routes/information/information.module.scss
+++ b/src/routes/information/information.module.scss
@@ -14,9 +14,13 @@
         display: flex;
         flex-direction: column;
     }
-    &__inpt{
+    &__inpt, 
+    &__textarea{
         width: 50%;
         margin: .8rem 0;
+    }
+    &__textarea{
+        resize: vertical;
     }
     &__btn{
         width: max-content;
@@ -24,7 +28,8 @@
 }
 
 @media (max-width: 768px) {
-    .information__form input{
+    .information__form input,
+    .information__form textarea{
         width: 100%;
     }
 }
