--- a/src/components/product/product.module.scss
+++ b/src/components/product/product.module.scss
@@ -1,8 +1,4 @@
 .product{
-    span{
-        font-size: 1.5rem;
-        color: #000;
-    }
 
     display: flex;
     flex-direction: column;
@@ -55,6 +51,29 @@
 
     &__favorites{
         margin-left: 1rem;
+    }
+    &__favorites_active{
+        background-color: #0BCF6B;
+        color: #fff;
+    }
+    // 
+    &__cart_active{
+        animation: updown .4s 1 ease-out;
+    }
+
+    & span{
+        font-size: 1.5rem;
+        color: #000;
+    }
+}
+
+// неудавшаяся анимация добавления продукта в корзину
+@keyframes updown {
+    0%{
+        transform: translateY(0);
+    }
+    100%{
+        transform: translateY(-8px);
     }
 }
 
