--- a/src/routes/cart/cart.module.scss
+++ b/src/routes/cart/cart.module.scss
@@ -20,6 +20,14 @@
         font-size: 2rem;
     }
 
+    &__fakeimg{
+        background-color: teal;
+        border-radius: 5px;
+        width: 150px;
+        height: 75%;
+        margin: 0 auto;
+    }
+
     &__items{
         margin: 1rem 0;
     }
